--- a/templates/base.html
+++ b/templates/base.html
@@ -5,9 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
         <link rel="icon" href="{{ url_for('static', filename='favicon.png') }}">
+        <script src="{{ url_for('static', filename='helpers.js') }}"></script>
         <title>{% block title %}Youtube Data Analysis{% endblock %}</title>
     </head>
-    <body class="m-1">
+    <body>
     {% block body %}{% endblock %}
     </body>
 </html>
